added more codes

--- a/index.html
+++ b/index.html
@@ -194,6 +194,8 @@
 
 					<a href="http://thunderboltz123.github.io/jailgame/">Click here to play my jail game!!!</a>
 
+					<a href="https://thunderboltz123.github.io/zombiegame/">Click here to play my second game, a zombie shooting game!</a>
+
 
 
 
